syntax = "proto3";
package colink_policy_module;

import "google/protobuf/wrappers.proto";

message Rule {
    string rule_id = 1;
    TaskFilter task_filter = 2;
    string action = 3;
    int32 priority = 4;
}

message TaskFilter {
    string task_id = 1;
    string protocol_name = 2;
    repeated string participants = 3;
    string role = 4;
    TaskFilter parent_task_filter = 5;
    google.protobuf.BoolValue require_agreement = 6;
}

message Settings {
    bool enable = 1;
    repeated Rule rules = 2;
}
